--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "build": "^0.1.4",
+    "builder": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
